--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
 
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/lasagna.html">lasagna</a>
+    <ul>
+        <li><a href="./recipes/lasagna.html">Lasagna</a></li>
+        <li><a href="./recipes/Roman-Style-Pizza.html">Pizza</a></li>
+        <li><a href="./recipes/salad.html">Salad</a></li>
+    </ul>
 </body>
 
 </html>
